# atlassian-cli

./: .gitignore  Cargo.toml  README.md  config.toml.example
.github/workflows/: release.yml
skills/atlassian-cli/: SKILL.md
src/: config.rs  lib.rs  main.rs
src/cli/: confluence.rs  epic.rs  issue.rs  me.rs  mod.rs  project.rs  tests.rs
src/client/: adf.rs  confluence.rs  mod.rs
src/output/: confluence.rs  mod.rs  table.rs  tui.rs
