[package]
name = "atlassian-cli"
version = "0.1.6"
edition = "2024"

[[bin]]
name = "atlassian"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
colored = "3"
crossterm = "0.29"
dirs = "6"
ratatui = "0.30"
reqwest = { version = "0.13", features = ["json", "query"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "1.1"
