[package]
name = "atlassian-cli"
version = "0.1.9"
edition = "2024"

[lib]
name = "atlassian_cli"
path = "src/lib.rs"

[[bin]]
name = "atlassian"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
colored = "3"
crossterm = "0.29"
dirs = "6"
pulldown-cmark = { version = "0.13.4", default-features = false }
ratatui = "0.30"
reqwest = { version = "0.13", features = ["json", "query"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
